wallet-ext: dogfooding fixes (#2511)
* wallet-ext: improve import mnemonic validation

* use formik & yup
* validate on change instead on blur to instantly enable/disable submit
* on blur transform the value of the textarea

* wallet-ext: css modules show original class name in dev mode

* also convert dashes to camelCase for exports

* wallet-ext: fix error message overflowing the container

* wallet-ext: link to explorer for account details

* from settings and active account label
* reuse components for explorer and external links

* wallet-ext: various ui fixes

* button color always black even for anchor elements
* wallet container stop expanding to full screen if not necessary
* coin type ellipsis text overflow (to avoid overflowing)
* coin type title

* wallet-ext: allow localhost and sui.io gateway host permissions

* to bypass cors when the api does not append the header for the extension origin

* wallet-ext: send coins format amount input

--- a/wallet/src/ui/app/components/coin-balance/CoinBalance.module.scss
+++ b/wallet/src/ui/app/components/coin-balance/CoinBalance.module.scss
@@ -23,6 +23,9 @@
     font-weight: 700;
     letter-spacing: -0.6px;
     color: #8bc3df;
+    max-width: 95%;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .value {
